<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fcv_terminos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TermsFragment">

    <ImageView
        android:id="@+id/iv_terminos"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/pic_terminos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_terminos_saludo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/terminos"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_terminos"
        app:layout_constraintTop_toBottomOf="@+id/iv_terminos" />

    <Switch
        android:id="@+id/sw_terminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/switch_terminos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_terminos_saludo"
        app:layout_constraintStart_toStartOf="@+id/tv_terminos_saludo"
        app:layout_constraintTop_toBottomOf="@+id/tv_terminos_saludo" />

    <Button
        android:id="@+id/btn_terms_aceptar"
        style="@style/customButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/terminos_aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sw_terminos"
        app:layout_constraintStart_toStartOf="@+id/sw_terminos"
        app:layout_constraintTop_toBottomOf="@+id/sw_terminos" />
</androidx.constraintlayout.widget.ConstraintLayout>